[build-system]
requires = ["ChimeraX-BundleBuilder"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-SwapAsym"
version = "0.1.0"
description = "ChimeraX SwapAsym bundle"
license = { text = "MIT" }
dynamic = ["classifiers", "requires-python"]

[project.urls]
# Homepage = "https://github.com/yourusername/ChimeraX-SwapAsym"

[chimerax]
package = "chimerax.swapasym"
pure = true
min-session-version = 1
max-session-version = 1
min-chimerax-version = "1.9"
categories = ["General"]
classifiers = []

[chimerax.command.swapasym]
category = "General"
description = "ChimeraX SwapAsym bundle"
